--- a/pauline/package.json
+++ b/pauline/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.18.1",
     "react": "^15.6.1",
+    "react-big-calendar": "^0.15.0",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
