--- a/pauline/package.json
+++ b/pauline/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "moment": "^2.18.1",
-    "react": "^15.6.1",
+    "react": "15.6.1",
     "react-big-calendar": "^0.15.0",
-    "react-bootstrap": "^0.31.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.12"
